--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,5 +24,10 @@ dependencies = [
     "python-dotenv>=1.1.0",
     "wandb>=0.19.9",
 ]
+
 [tool.pyright]
 typeCheckingMode = "off"
+
+[tool.ruff]
+line-length = 120
+fix = true
