--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "ruff>=0.11.6",
     "geopy>=2.4.1",
     "safetensors>=0.5.3",
+    "scikit-learn>=1.6.1",
 ]
 
 [tool.pyright]
