--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "geopy>=2.4.1",
     "safetensors>=0.5.3",
     "scikit-learn>=1.6.1",
+    "matplotlib>=3.10.1",
 ]
 
 [tool.pyright]
